--- a/app/src/main/res/layout/activity_transporter_messages_list_view.xml
+++ b/app/src/main/res/layout/activity_transporter_messages_list_view.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/transparent">
@@ -15,7 +16,11 @@
             android:id="@+id/farmername"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
+            android:layout_alignTop="@+id/t_acceptRequestButton"
+            android:layout_marginLeft="13dp"
+            android:layout_marginStart="13dp"
+            android:layout_toEndOf="@+id/farmerPhoto"
+            android:layout_toRightOf="@+id/farmerPhoto"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
 
         <!-- PRICE IS ACTUALLY MESSAGE CONTENT -->
@@ -23,26 +28,30 @@
             android:id="@+id/t_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/t_acceptRequestButton"
-            android:layout_alignBottom="@+id/t_acceptRequestButton"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="13dp"
+            android:layout_marginStart="13dp"
+            android:layout_toEndOf="@+id/farmerPhoto"
+            android:layout_toRightOf="@+id/farmerPhoto"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-            android:textColor="@color/common_google_signin_btn_text_light_default" />
+            android:textColor="@color/common_google_signin_btn_text_light_default"
+            android:textSize="12sp" />
 
         <TextView
             android:id="@+id/t_price"
-            android:layout_width="200dp"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignTop="@+id/t_rejectRequestButton"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="7dp"
+            android:layout_marginRight="7dp"
+            android:layout_toLeftOf="@+id/t_rejectRequestButton"
+            android:layout_toStartOf="@+id/t_rejectRequestButton"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
         <Button
             android:id="@+id/t_acceptRequestButton"
             style="@style/Widget.AppCompat.Button.Colored"
-            android:layout_width="wrap_content"
+            android:layout_width="80dp"
             android:layout_height="36dp"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
@@ -53,7 +62,7 @@
         <Button
             android:id="@+id/t_rejectRequestButton"
             style="@style/Widget.AppCompat.Button"
-            android:layout_width="wrap_content"
+            android:layout_width="80dp"
             android:layout_height="36dp"
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
@@ -61,6 +70,15 @@
             android:layout_alignParentTop="@id/t_acceptRequestButton"
             android:backgroundTint="@android:color/holo_red_dark"
             android:text="Decline" />
+
+        <ImageView
+            android:id="@+id/farmerPhoto"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            app:srcCompat="@drawable/profile" />
 
     </RelativeLayout>
 </LinearLayout>
