--- a/app/src/main/res/layout/activity_transporter_history.xml
+++ b/app/src/main/res/layout/activity_transporter_history.xml
@@ -22,43 +22,19 @@
         android:id="@+id/listview"
         android:layout_width="321dp"
         android:layout_height="371dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/transporterHistoryPlanOrderButton" />
-
-    <ToggleButton
-        android:id="@+id/transporterHistoryHistoryButton"
-        android:layout_width="103dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="8dp"
-        android:text="History"
-        android:textOff="History"
-        android:textOn="History"
-        app:layout_constraintStart_toEndOf="@+id/transporterHistoryPlanOrderButton"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ToggleButton
-        android:id="@+id/transporterHistoryPlanOrderButton"
-        android:layout_width="117dp"
-        android:layout_height="44dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="8dp"
-        android:textOff="Plan Order"
-        android:textOn="Plan Order"
-        app:layout_constraintStart_toEndOf="@+id/transporterHistoryHomeButton"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ToggleButton
-        android:id="@+id/transporterHistoryHomeButton"
-        android:layout_width="74dp"
-        android:layout_height="44dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
-        android:text="Today"
-        android:textOff="Home"
-        android:textOn="Home"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView29" />
+
+    <TextView
+        android:id="@+id/textView29"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="History"
+        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
