--- a/app/src/main/res/layout/activity_farmer_request_pickup_choose_transporter.xml
+++ b/app/src/main/res/layout/activity_farmer_request_pickup_choose_transporter.xml
@@ -102,7 +102,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <Button
-            android:id="@+id/viewProfile"
+            android:id="@+id/acceptButton"
             style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -120,7 +120,7 @@
             android:layout_marginStart="36dp"
             android:layout_marginTop="56dp"
             android:text="Select"
-            app:layout_constraintStart_toEndOf="@+id/viewProfile"
+            app:layout_constraintStart_toEndOf="@+id/acceptButton"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
@@ -133,18 +133,6 @@
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@mipmap/close" />
 
-        <TextView
-            android:id="@+id/transporterName"
-            android:layout_width="137dp"
-            android:layout_height="38dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:text="Transporter X"
-            android:textSize="22sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
     </android.support.constraint.ConstraintLayout>
 
 </android.support.constraint.ConstraintLayout>
