--- a/app/src/main/res/layout/activity_transporter_messages_list_view.xml
+++ b/app/src/main/res/layout/activity_transporter_messages_list_view.xml
@@ -25,7 +25,7 @@
 
         <!-- PRICE IS ACTUALLY MESSAGE CONTENT -->
         <TextView
-            android:id="@+id/t_time"
+            android:id="@+id/t_address"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
@@ -38,38 +38,15 @@
             android:textSize="12sp" />
 
         <TextView
-            android:id="@+id/t_price"
+            android:id="@+id/t_pickupDate"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_marginEnd="7dp"
             android:layout_marginRight="7dp"
-            android:layout_toLeftOf="@+id/t_rejectRequestButton"
-            android:layout_toStartOf="@+id/t_rejectRequestButton"
+            android:layout_toLeftOf="@+id/t_declineRequestButton"
+            android:layout_toStartOf="@+id/t_declineRequestButton"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
-
-        <Button
-            android:id="@+id/t_acceptRequestButton"
-            style="@style/Widget.AppCompat.Button.Colored"
-            android:layout_width="80dp"
-            android:layout_height="36dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginTop="8dp"
-            android:text="Accept" />
-
-        <Button
-            android:id="@+id/t_rejectRequestButton"
-            style="@style/Widget.AppCompat.Button"
-            android:layout_width="80dp"
-            android:layout_height="36dp"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentTop="@id/t_acceptRequestButton"
-            android:backgroundTint="@android:color/holo_red_dark"
-            android:text="Decline" />
 
         <ImageView
             android:id="@+id/farmerPhoto"
