--- a/app/src/main/res/layout/activity_farmer_request_pickup_choose_trasporter_listview.xml
+++ b/app/src/main/res/layout/activity_farmer_request_pickup_choose_trasporter_listview.xml
@@ -14,7 +14,7 @@ android:background="#f2ffe6">
     >
 
     <ImageView
-    android:id="@+id/imageView"
+    android:id="@+id/farmerPhoto"
     android:layout_width="80dp"
     android:layout_height="80dp"
     android:layout_weight="0.11"
@@ -27,8 +27,8 @@ android:background="#f2ffe6">
         android:layout_alignParentTop="true"
         android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
-        android:layout_toEndOf="@+id/imageView"
-        android:layout_toRightOf="@+id/imageView"
+        android:layout_toEndOf="@+id/farmerPhoto"
+        android:layout_toRightOf="@+id/farmerPhoto"
         android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large" />
 
     <TextView
