--- a/app/src/main/res/layout/activity_transporter_view_schedule_listview.xml
+++ b/app/src/main/res/layout/activity_transporter_view_schedule_listview.xml
@@ -49,14 +49,11 @@
         <Button
             android:id="@+id/startButton"
             style="@style/Widget.AppCompat.Button.Colored"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/farmerName"
-            android:layout_alignBottom="@+id/farmerName"
-            android:layout_marginLeft="145dp"
-            android:layout_marginStart="145dp"
-            android:layout_toEndOf="@+id/timePicked"
-            android:layout_toRightOf="@+id/timePicked"
+            android:layout_width="75dp"
+            android:layout_height="40dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
             android:text="Start" />
     </RelativeLayout>
 </LinearLayout>
