--- a/app/src/main/res/layout/activity_farmer_request_pickup_order_confirmation.xml
+++ b/app/src/main/res/layout/activity_farmer_request_pickup_order_confirmation.xml
@@ -67,7 +67,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
-        android:text="160.00 COP"
+        android:text="16 000.00 COP"
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView271" />
@@ -111,7 +111,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
-        android:text=" 7.85 TAX"
+        android:text=" 785.00 TAX"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView281" />
 
@@ -121,7 +121,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
-        android:text="152.15 SERVICE COST"
+        android:text="15215.00 SERVICE COST"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView261" />
 
