--- a/app/src/main/res/layout/activity_sign_up_transporter_add_profile.xml
+++ b/app/src/main/res/layout/activity_sign_up_transporter_add_profile.xml
@@ -14,7 +14,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="28dp"
-        android:text="Add a profile picture!"
+        android:text="Add a profile picture."
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
         android:textSize="30sp"
@@ -29,7 +29,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="20dp"
         android:text="Enter a short bio:"
-        android:textSize="24sp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signUpTransporterAddProfileButton" />
 
