--- a/app/src/main/res/layout/activity_farmer_request_pickup_set_dropoff_location.xml
+++ b/app/src/main/res/layout/activity_farmer_request_pickup_set_dropoff_location.xml
@@ -135,7 +135,7 @@
         android:layout_height="67dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
-        android:text="Where should your produce be delivered?"
+        android:text="Produce delivery location"
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
