--- a/app/src/main/res/layout/activity_profile_history.xml
+++ b/app/src/main/res/layout/activity_profile_history.xml
@@ -36,7 +36,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:text="History"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
