--- a/app/src/main/res/layout/activity_sign_up_transporter_add_photos.xml
+++ b/app/src/main/res/layout/activity_sign_up_transporter_add_photos.xml
@@ -60,7 +60,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
         android:text="Add Vehicle Pictures"
-        android:textSize="36sp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -72,7 +72,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="This will improve your chances of getting higher quality farmers."
+        android:text="Adding vehicule pictures increases the number of transporter requests you may receive by 12%."
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
