--- a/app/src/main/res/layout/activity_farmer_begin_request_pickup.xml
+++ b/app/src/main/res/layout/activity_farmer_begin_request_pickup.xml
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/numberOfCrop"
         android:layout_width="141dp"
         android:layout_height="71dp"
         android:layout_marginEnd="16dp"
