--- a/app/src/main/res/layout/activity_farmer_messages.xml
+++ b/app/src/main/res/layout/activity_farmer_messages.xml
@@ -43,7 +43,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView17" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/writeNewMessageButton"
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="178dp"
         android:layout_height="wrap_content"
