--- a/app/src/main/res/layout/activity_transporter_messages.xml
+++ b/app/src/main/res/layout/activity_transporter_messages.xml
@@ -19,7 +19,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <Button
-            android:id="@+id/acceptButton"
+            android:id="@+id/changeStatusButton"
             style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -37,7 +37,7 @@
             android:layout_marginStart="36dp"
             android:layout_marginTop="60dp"
             android:text="Decline"
-            app:layout_constraintStart_toEndOf="@+id/acceptButton"
+            app:layout_constraintStart_toEndOf="@+id/changeStatusButton"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
