--- a/app/src/main/res/layout/activity_transporter_view_schedule_listview.xml
+++ b/app/src/main/res/layout/activity_transporter_view_schedule_listview.xml
@@ -46,14 +46,15 @@
             android:textColor="#408000"
             android:textSize="15sp" />
 
-        <Button
-            android:id="@+id/startButton"
-            style="@style/Widget.AppCompat.Button.Colored"
-            android:layout_width="75dp"
-            android:layout_height="40dp"
+        <TextView
+            android:id="@+id/status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true"
-            android:text="Start" />
+            android:layout_centerVertical="true"
+            android:text="TextView"
+            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored" />
+
     </RelativeLayout>
 </LinearLayout>
