fixed some wording in view schedule

--- a/app/src/main/res/layout/activity_transporter_view_schedule.xml
+++ b/app/src/main/res/layout/activity_transporter_view_schedule.xml
@@ -78,19 +78,6 @@
             android:text="I can't make the trip today."
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/earlyButton" />
-
-        <Button
-            android:id="@+id/earlyButton"
-            style="@style/Widget.AppCompat.Button.Borderless"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:text="I will be a few mins early."
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/lateButton" />
 
         <Button
@@ -102,6 +89,19 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:text="I will be a few mins late."
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/hereButton" />
+
+        <Button
+            android:id="@+id/hereButton"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:text="I'm here!"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/onMyWayButton" />
