translated some pages to spanish

--- a/app/src/main/res/layout/activity_begin_sign_up.xml
+++ b/app/src/main/res/layout/activity_begin_sign_up.xml
@@ -47,7 +47,7 @@ tools:context="com.example.wagner.avocado.BeginSignUp">
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="28dp"
-        android:text="Log In"
+        android:text="Entrar"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -62,7 +62,7 @@ tools:context="com.example.wagner.avocado.BeginSignUp">
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="12dp"
-        android:text="Sign Up"
+        android:text="Regístrese"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
