--- a/app/src/main/res/layout/activity_farmer_request_pickup_order_confirmation.xml
+++ b/app/src/main/res/layout/activity_farmer_request_pickup_order_confirmation.xml
@@ -13,7 +13,7 @@
         android:layout_width="367dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:text="Finish and Check Out"
+        android:text="Finalizar"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:layout_editor_absoluteX="5dp" />
 
@@ -34,7 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
-        android:text="DELIVERY OF 560 kg of avocados"
+        android:text="ENTREGA DE 560 aguacates"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
@@ -45,7 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
-        android:text="FROM Cordoba, Colombia"
+        android:text="DE La Unión, Colombia"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView10" />
@@ -56,7 +56,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
-        android:text="TO Bogota, Colombia"
+        android:text="A Cali, Colombia"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView11" />
@@ -78,7 +78,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
-        android:text="PICKUP ON AM, 22 November 2017"
+        android:text="Recoger en la mañana, 4 de Febrero 2018"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView12" />
@@ -89,7 +89,7 @@
         android:layout_height="19dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
-        android:text="DRIVER Maria de Leon"
+        android:text="TRANSPORTADOR María de León"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView14" />
@@ -101,7 +101,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
-        android:text="Your order total"
+        android:text="Total"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView15" />
 
@@ -111,7 +111,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
-        android:text=" 785.00 TAX"
+        android:text="7.85 IMPUESTO"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView281" />
 
@@ -131,7 +131,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
-        android:text="PAYING WITH VISA ENDING IN 7743"
+        android:text="152,15 COSTO DE SERVICIO"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView13" />
 
