--- a/app/src/main/res/layout/activity_sign_up_set_location_transporter.xml
+++ b/app/src/main/res/layout/activity_sign_up_set_location_transporter.xml
@@ -13,7 +13,7 @@
         android:layout_height="39dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:text="Skip"
+        android:text="Saltar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -39,7 +39,7 @@
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="264dp"
         android:layout_marginStart="8dp"
-        android:text="BACK"
+        android:text="Anterior"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"></Button>
@@ -51,7 +51,7 @@
         android:layout_height="0dp"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="8dp"
-        android:text="NEXT"
+        android:text="Siguiente"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"></Button>
 
@@ -63,7 +63,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:ems="10"
-        android:hint="Address line 1"
+        android:hint="Dirección Línea 1"
         android:inputType="textPostalAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
@@ -77,7 +77,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
         android:ems="10"
-        android:hint="Country"
+        android:hint="País"
         android:inputType="textPersonName"
         app:layout_constraintStart_toEndOf="@+id/postalcode"
         app:layout_constraintTop_toBottomOf="@+id/city" />
@@ -90,7 +90,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:hint="Address line 2"
+        android:hint="Dirección Línea 2"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -103,7 +103,7 @@
         android:layout_marginStart="72dp"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:hint="Zip Code"
+        android:hint="Código Postal"
         android:inputType="textPersonName"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/city" />
@@ -116,7 +116,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:hint="City"
+        android:hint="Ciudad"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
@@ -131,6 +131,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:hint="Where is your home?"
+        android:text="¿Dónde se encuentra ubicado?"
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -140,11 +141,11 @@
         android:id="@+id/signUpSetLocationEnterAddressButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="72dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="Enter Address"
-        android:textOff="Enter Address"
-        android:textOn="Enter Address"
+        android:text="Entrar Dirección"
+        android:textOff="Entrar Dirección"
+        android:textOn="Entrar Dirección"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
@@ -152,11 +153,11 @@
         android:id="@+id/signUpSetLocationDropPinButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="68dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginTop="16dp"
         android:text="Drop Pin"
-        android:textOff="Drop Pin"
-        android:textOn="Drop Pin"
+        android:textOff="Poner Su Ubicación"
+        android:textOn="Poner Su Ubicación"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
