--- a/app/src/main/res/layout/activity_farmer_request_pickup_review_order.xml
+++ b/app/src/main/res/layout/activity_farmer_request_pickup_review_order.xml
@@ -12,8 +12,9 @@
         android:layout_height="42dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
-        android:text="Review Order"
+        android:text="Recibo de la orden"
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+        android:textSize="26sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -23,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
-        android:text="DELIVERY OF 560 kg of avocados"
+        android:text="ENTREGA DE 560 aguacates"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
@@ -34,7 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
-        android:text="FROM Cordoba, Colombia"
+        android:text="DE La Unión, Colombia"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView10" />
@@ -45,7 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
-        android:text="TO Bogota, Colombia"
+        android:text="A Cali, Colombia"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView11" />
@@ -67,7 +68,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
-        android:text="PICKUP ON AM, 22 November 2017"
+        android:text="Recoger en la mañana, 4 de Febrero 2018"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView12" />
@@ -79,7 +80,7 @@
         android:layout_marginBottom="32dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
-        android:text="DRIVER Maria de Leon"
+        android:text="TRANSPORTADOR María de León"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         app:layout_constraintBottom_toTopOf="@+id/textView26"
         app:layout_constraintStart_toStartOf="parent"
@@ -103,7 +104,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginStart="8dp"
-        android:text="Back"
+        android:text="Anterior"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -113,7 +114,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginStart="32dp"
-        android:text="Your order total"
+        android:text="Total"
         app:layout_constraintBottom_toTopOf="@+id/textView28"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -123,7 +124,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginStart="32dp"
-        android:text=" 785.00 TAX"
+        android:text="7.85 IMPUESTO"
         app:layout_constraintBottom_toTopOf="@+id/textView13"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -133,7 +134,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginStart="32dp"
-        android:text="15215.00 SERVICE COST"
+        android:text="152,15 COSTO DE SERVICIO"
         app:layout_constraintBottom_toTopOf="@+id/textView27"
         app:layout_constraintStart_toStartOf="parent" />
 
