--- a/app/src/main/res/layout/activity_farmer_request_pickup_set_pickup_location.xml
+++ b/app/src/main/res/layout/activity_farmer_request_pickup_set_pickup_location.xml
@@ -77,11 +77,11 @@
         android:id="@+id/farmerRequestPickupSetLocationEnterAddressButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
-        android:text="Enter Address"
-        android:textOff="Enter Address"
-        android:textOn="Enter Address"
+        android:text="Entrar Dirección"
+        android:textOff="Entrar Dirección"
+        android:textOn="Entrar Dirección"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView21" />
 
@@ -92,8 +92,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="Drop Pin"
-        android:textOff="Drop Pin"
-        android:textOn="Drop Pin"
+        android:textOff="Poner Su Ubicación"
+        android:textOn="Poner Su Ubicación"
         app:layout_constraintStart_toEndOf="@+id/farmerRequestPickupSetLocationEnterAddressButton"
         app:layout_constraintTop_toBottomOf="@+id/textView21" />
 
@@ -114,7 +114,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
-        android:text="@string/next"
+        android:text="Siguiente"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -125,18 +125,21 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginStart="8dp"
-        android:text="@string/back"
+        android:text="Anterior"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView21"
-        android:layout_width="304dp"
+        android:layout_width="317dp"
         android:layout_height="35dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
-        android:text="Produce pickup location"
+        android:text="¿Dónde debería ir el transportador?"
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -158,49 +161,40 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="My Farm" />
+            android:text="La Finca o Granja"
+            android:textSize="12sp" />
 
         <RadioButton
             android:id="@+id/townCentre"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="Town Centre" />
+            android:text="La Plaza"
+            android:textSize="12sp" />
 
         <RadioButton
             android:id="@+id/church"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:text="Church" />
+            android:text="La Iglesia"
+            android:textSize="12sp" />
     </RadioGroup>
 
     <EditText
         android:id="@+id/otherText"
-        android:layout_width="166dp"
+        android:layout_width="143dp"
         android:layout_height="44dp"
         android:layout_marginBottom="48dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:ems="10"
-        android:hint="If other, please specify."
+        android:hint="Otro Lugar"
         android:inputType="textPersonName"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.541"
-        app:layout_constraintStart_toStartOf="@+id/farmerRequestPickupSetPickupLocationBackButton"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
-
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
-        android:layout_marginStart="32dp"
-        android:text="What kind of location is this?"
-        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
