--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -16,7 +16,7 @@
         android:text="Farmer"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password"
-        tools:text="Farmer" />
+        tools:text="Productor" />
 
     <CheckBox
         android:id="@+id/Transporter"
@@ -31,7 +31,7 @@
         app:layout_constraintEnd_toStartOf="@+id/pmCheckBox"
         app:layout_constraintStart_toEndOf="@+id/Farmer"
         app:layout_constraintTop_toBottomOf="@+id/password"
-        tools:text="Transporter" />
+        tools:text="Transportador" />
 
     <Button
         android:id="@+id/cancelButton"
@@ -42,7 +42,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Cancel"
+        android:text="Cancelar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
